
/**
 * 
 */
public enum AppointmentStatus {
    Scheduled,
    InProgress,
    Completed,
    Cancelled
}