
/**
 * 
 */
public enum AppointmentType {
    WalkIn,
    FollowUp,
    Online
}