package Package1;

import java.util.Date;

public class Admission {
    public int admissionId;
    public Date startDate;
    public Date endDate;
    public String status;

    public Admission() {
    }
}
