package Package1;

public enum BloodType {
    A_Pos,
    A_Neg,
    B_Pos,
    B_Neg,
    AB_Pos,
    AB_Neg,
    O_Pos,
    O_Neg
}
