package Package1;

import java.io.*;
import java.util.*;

/**
 * 
 */
public class Room {

    /**
     * Default constructor
     */
    public Room() {
    }

    /**
     * 
     */
    public int roomId;

    /**
     * 
     */
    public RoomType roomType;

    /**
     * 
     */
    public RoomStatus occupancyStatus;

    /**
     * 
     */
    public double dailyRate;

    /**
     * 
     */
    public void markOccupied() {
        // TODO implement here
    }

    /**
     * 
     */
    public void markAvailable() {
        // TODO implement here
    }

    /**
     * 
     */
    public void markUnderMaintenance() {
        // TODO implement here
    }

    /**
     * @param days
     */
    public void calculateCost(int days) {
        // TODO implement here
    }

}