package Package1;

public enum RoomStatus {
    Available,
    Occupied,
    UnderMaintenance
}
