package Package1;

import java.io.*;
import java.util.*;

/**
 * 
 */
public class Secretary {

    /**
     * Default constructor
     */
    public Secretary() {
    }

    /**
     * 
     */
    public int secretaryId;

    /**
     * 
     */
    public String fullName;

    /**
     * 
     */
    public String contactNumber;

    /**
     * 
     */
    public String email;

    /**
     * 
     */
    public ShiftType assignedShift;


    /**
     * @param newPhone 
     * @param newEmail
     */
    public void updateContact(String newPhone, String newEmail) {
        // TODO implement here
    }

}