package Package1;

public class User {
    public int userId;
    public String fullName;
    public String email;
    public String password;

    public User() {
    }
}
