
/**
 * 
 */
public enum RoomType {
    GeneralWard,
    PrivateRoom,
    ICU
}