
/**
 * 
 */
public enum ShiftType {
    Morning,
    Evening,
    Night
}