package Package1;

import java.sql.Time;

public class DoctorAvailability {
    public int availabilityId;
    public String dayOfWeek;
    public Time startTime;
    public Time endTime;

    public DoctorAvailability() {
    }
}
