package Package1;

public enum NurseStatus {
    Available,
    Busy,
    OffDuty
}
